--- a/css/style.css
+++ b/css/style.css
@@ -126,32 +126,54 @@ i {
 .head .flex {
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
+  flex-wrap: wrap;
+  justify-content: space-between;
   /* width: 350px; */
   /* margin: 10px 100px 10px 0px; */
 }
 .head {
   background: var(--bgImage);
   background-size: var(--bgSize);
-  padding: 30px 20px 50px 20px;
+  padding: 40px 40px 10px 40px;
+}
+.head .name {
+  display: flex;
+  align-items: center;
+}
+.head .name .anime {
+  animation: rotate 3s linear infinite;
+}
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .head span {
   background: var(--primaryColor);
   font-size: 15px;
   font-weight: 400;
+  line-height: 2.2;
 }
 .bottom {
   padding: 20px;
-  width: 90%;
-  background-color: var(--secondaryColor);
+  width: 85%;
   color: var(--primaryColor);
   margin: auto;
-  margin-top: -30px;
+  /* margin-top: -120px; */
+}
+.bottom h5 {
+  color: var(--secondaryColor);
+  background: var(--primaryColor);
+  display: inline-block;
 }
 .bottom .block {
   justify-content: space-between;
-  border: 1px solid #a4a4a4;
+  background-color: var(--secondaryColor);
+  /* border: 1px solid #a4a4a4; */
   padding: 0 10px;
 }
 .bottom .block .box {
@@ -162,4 +184,9 @@ i {
 .bottom .block .strong span {
   font-weight: 500;
   margin: 5px 0;
+}
+.app img {
+  width: 30px;
+  background: var(--secondaryColor);
+  border-radius: 50%;
 }
